--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -3,6 +3,8 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Bun venit!</h1>
+    <h2>PROIECT MEDII DE PROGRAMARE AVANSATE</h2>
+    <h3>Student: Neagu Denisa</h3>
+    <p>Specializare: E-BUSINESS</p>
 </div>
