--- a/Views/Home/Statistics.cshtml
+++ b/Views/Home/Statistics.cshtml
@@ -23,4 +23,8 @@
             </td>
         </tr>
     }
+    
 </table>
+<div>
+    <a class="nav-link text-dark" asp-area="" asp-controller="Programares" asp-action="Index">Back to programari</a>
+</div>
