--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -35,7 +35,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Pacients" asp-action="Index">Pacienti</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Statistics">Statistici</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Programares" asp-action="Index">Programari</a>
                         </li>
                     </ul>
                 </div>
